# nbs-bond-protocol

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Plan.md  README.md  SECURITY.md  docker-compose.yml  stellar-freighter-api-6.0.1.tgz
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
api/: .eslintrc.js  package-lock.json  package.json
api/src/: app.module.spec.ts  app.module.ts
contracts/: Cargo.toml
contracts/bond-issuer/: Cargo.toml
contracts/bond-issuer/src/: lib.rs
contracts/coupon-engine/: Cargo.toml
contracts/coupon-engine/src/: lib.rs
contracts/credit-retirement/: Cargo.toml
contracts/dex-router/: Cargo.toml
contracts/dex-router/src/: lib.rs
contracts/oracle-consumer/: Cargo.toml
contracts/project-registry/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs
docs/: architecture.md  credit-methodology.md  governance.md  oracle-design.md
frontend/: .eslintrc.json  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  styles.css
ipfs/: upload.ts
ipfs/schemas/: oracle-report.schema.json  (+1 more)
oracle/: iot-aggregator.ts  satellite-processor.ts  verra-adapter.ts
prompts/: README.md  day-01-scaffold.md  day-02-dev-env.md  day-03-project-registry.md  day-04-bond-issuer.md  day-05-coupon-engine.md  day-06-oracle-consumer.md  day-07-dex-router.md  day-08-credit-retirement.md  day-09-stellar-service.md  day-10-bonds-projects-api.md  day-11-oracle-marketplace-api.md  day-12-auth.md  day-13-frontend-shared.md  day-14-dashboard-projects-ui.md  day-15-bonds-marketplace-ui.md  day-16-integration-docs.md
scripts/: deploy-mainnet.sh  deploy-testnet.sh  e2e-test.sh  migrate.ts  seed-testnet.ts
(+95 files in other folders)
