[package]
name = "nbbs-bond-issuer"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "26.0.1"
nbbs-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
