[package]
name = "nbbs-coupon-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26.0.1"
nbbs-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
nbbs-bond-issuer = { path = "../bond-issuer", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
